--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: python
 python: "2.7"
 install:
     - pip install -r requirements.txt
+    - pip install coverage
 script: nosetests --with-coverage --cover-package=flask_permissions
