--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: "2.7"
 install:
-    - pip install -r requirements.txt
+    - pip install  --allow-external -r requirements.txt
     - pip install coverage
 script: nosetests --with-coverage --cover-package=flask_permissions
