--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
-python: "2.7"
+python:
+    - "2.7"
+    - "3.5"
 install:
-    - pip install -r requirements.txt --allow-external twill --allow-unverified twill
-    - pip install coverage nose lxml requests cssselect
+    - pip install -r requirements.txt
+    - pip install nose coverage
 script: nosetests --with-coverage --cover-package=flask_permissions
