--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-Flask==0.10.1
-Flask-Testing==0.4
-Flask-SQLAlchemy==1.0
-Werkzeug==0.9.4
-wsgiref==0.1.2
+appdirs==1.4.3
+click==6.7
+Flask==0.12.1
+Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+packaging==16.8
+pyparsing==2.2.0
+six==1.10.0
+SQLAlchemy==1.1.9
+Werkzeug==0.12.1
